# menu_planner

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: docker-compose.yml
docker/app/: Dockerfile  nginx.conf  start.sh
docker/nginx/: nginx.conf
frontend/: index.html  login.html  styles.css  weeks.html
frontend/css/: styles.css
frontend/scripts/: login.js  scripts.js
menu_planner/: Makefile  __init__.py  app.py  forms.py  models.py  pyproject.toml  routes.py  settings.py
menu_planner/api/: weeks.py
menu_planner/forms/: login.py
menu_planner/static/css/: styles.css
menu_planner/static/scripts/: login.js  register.js  scripts.js
menu_planner/storage/: __init__.py  models.py
menu_planner/storage/menu_planner/: env.py
menu_planner/storage/menu_planner/versions/: 9c760e1a9c74_initial_migration.py
menu_planner/templates/: 404.html  500.html  base.html  index.html  login.html  register.html  week.html  weeks.html
migrations/: alembic.ini
migrations/menu_planner/: env.py
migrations/menu_planner/versions/: 1c818a694ef9_add_registration.py  2e5033376bc4_add_weeks.py  7239603b23b2_add_meals.py  9c760e1a9c74_initial_migration.py
