[tool.poetry]
name = "menu_planner"
version = "0.0.0"
description = "My Menu Planner app to get a shopping list in a click"
authors = ["Filipp Aleksandrov <falexandrov@gmail.com>"]
maintainers = ["Filipp Aleksandrov <falexandrov@gmail.com>"]
readme = "./README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

alembic = "^1.14.0"
flask = "^3.1.0"
flask-wtf = "^1.2.2"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"
pytest-clarity = "1.0.1"
pytest-lazy-fixture = "0.6.3"
black = "23.3.0"
pylint = "2.15.10"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pytest.ini_options]
xfail_strict = true
filterwarnings = [
    'ignore::Warning',
]
addopts = '--tb=short -vv'

[tool.mypy]
python_version = "3.10"
exclude = [
    '/test_.*',
]

ignore_missing_imports = true
show_column_numbers = true
show_absolute_path = true

allow_redefinition = true
no_implicit_reexport = true
strict_equality = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

warn_unused_ignores = true
warn_unused_configs = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true

no_implicit_optional = true

[tool.pylint.MASTER]
# Use multiple processes to speed up Pylint.
jobs = 0

[tool.pylint.FORMAT]
# Maximum number of characters on a single line.
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
# Disable the message, report, category or checker with the given id(s).
disable = '''
    fixme,
    missing-docstring,
    too-many-arguments,
    too-few-public-methods,
    redefined-outer-name,
    no-member,
'''

[tool.pylint.BASIC]
# Regular expression matching correct argument names. Overrides argument-naming-style
argument-rgx = '[a-z_][a-z0-9_]{1,60}$'

# Regular expression matching correct function names. Overrides function-naming-style.
function-rgx = '[a-z_][a-z0-9_]{2,115}$'

# Good variable names which should always be accepted, separated by a comma.
good-names = 'i,j,k,v,f,e,x,y,z,_,logger,pytestmark,qa,id'

# Regular expression matching correct method names.
method-rgx = '[a-z_][A-Za-z0-9_]{1,100}$'

# Regular expression matching correct variable names.
variable-rgx = '[a-z_][a-z0-9_]{1,60}$'

# Regular expression matching correct class attribute names
class-attribute-rgx = '([A-Za-z_][A-Za-z0-9_]{1,60}|(__.*__))$'

# Include a hint for the correct naming format with invalid-name
include-naming-hint = 'yes'

[tool.pylint.REPORTS]
# Template used to display messages. This is a python new-style format string
# used to format the message information. See doc for all details.
msg-template = '{abspath}:{line}:{obj} [{symbol}({msg_id})] {msg}'

[tool.pylint.DESIGN]
# Maximum number of locals for function / method body
max-locals = 25

# Maximum number of public methods for a class (see R0904).
max-public-methods = 100

[tool.pylint.SIMILARITIES]
# Ignore imports when computing similarities.
ignore-imports = 'yes'
